--- a/controller/CSS/login_style.css
+++ b/controller/CSS/login_style.css
@@ -103,7 +103,8 @@ p{
 
 input[type="text"],
 input[type="password"],
-input[type="number"] {
+input[type="number"],
+input[type="email"] {
     width: 100%;
     height: 35px;
     border: 2px solid rgba(153, 226, 245, 0.247);
